TestSuite/errors/err0058.pas
type TClass = class
destructor Destroy;
begin
end;
procedure Test; virtual; override;
begin
end;
end;

begin

end.